--- a/language/package.json
+++ b/language/package.json
@@ -1,18 +1,17 @@
 {
   "name": "language",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "vitest run"
   },
   "main": "./dist/index",
   "types": "./dist/index.d.ts",
   "devDependencies": {
-    "@types/jest": "^26.0.16",
-    "jest": "^29.7.0",
-    "ts-jest": "^26.4.4",
     "ts-node": "^9.1.0",
-    "typescript": "^4.1.2"
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.5"
   },
   "dependencies": {
     "@domdomegg/masala-parser": "^1.0.1"
